kubernetes-v1/anaconda.yaml
kind: Service
apiVersion: v1
metadata:
  name: jupyter
spec:
  selector:
    app: jupyter
  ports:
    - port: 8888
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jupyter
spec:
  selector:
    matchLabels:
      app: jupyter 
  serviceName: "jupyter"
  replicas: 1 
  minReadySeconds: 10 
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: jupyter
        image: m1c4lv/hadoop-jupyter:debian11
        command: ["sh", "-c", jupyter notebook --notebook-dir=/opt/notebooks --ip='*' --port=8888 --no-browser --allow-root]
        ports:
        - containerPort: 8888
          name: jupyter
        volumeMounts:
        - name: jupyter
          mountPath: /opt/notebooks
  volumeClaimTemplates:
  - metadata:
      name: jupyter
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 1Gi
