kubernetes-v1/historyserver.yaml
kind: Service
apiVersion: v1
metadata:
  name: historyserver
spec:
  selector:
    app: historyserver
  ports:
    - port: 8188
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hadoop-historyserver
spec:
  selector:
    matchLabels:
      app: historyserver # has to match .spec.template.metadata.labels
  serviceName: "historyserver"
  replicas: 1 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: historyserver # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: historyserver
        image: m1c4lv/hadoop-historyserver:debian11
        ports:
        - containerPort: 8188
          name: historyserver
        volumeMounts:
        - name: historyserver
          mountPath: /hadoop/yarn/timeline
  volumeClaimTemplates:
  - metadata:
      name: historyserver
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 1Gi
