kubernetes-v1/hive.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive
  labels:
    app: hive
spec:
  ports:
  - port: 10000
    name: webhive
  clusterIP: None
  selector:
    app: hive
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-server
  labels:
    app: hive-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hive-server
  template:
    metadata:
      labels:
        app: hive-server
    spec:
      containers:
      - name: hive-server
        image: m1c4lv/hadoop-hive:v1
        ports:
        - containerPort: 10000
