kubernetes-v1/mysqlserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-server
  labels:
    app: mysql-server
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
    app: mysql-server
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hadoop-mysql-server
spec:
  selector:
    matchLabels:
      app: mysql-server # has to match .spec.template.metadata.labels
  serviceName: "mysql-server"
  replicas: 1 # by default is 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: mysql-server # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql-server
        image: mysql:5.7-debian
        args: ["--default-authentication-plugin=mysql_native_password"]
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-server
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-server
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 1Gi
