kubernetes-v1/nodemanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodemanager
  labels:
    app: nodemanager
spec:
  ports:
  - port: 8042
    name: node
  clusterIP: None
  selector:
    app: nodemanager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodemanager
  labels:
    app: nodemanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodemanager
  template:
    metadata:
      labels:
        app: nodemanager
    spec:
      containers:
      - name: nodemanager
        image: m1c4lv/hadoop-nodemanager:v1
        ports:
        - containerPort: 8042
