kubernetes-v1/resourcemanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: resourcemanager
  labels:
    app: resourcemanager
spec:
  ports:
  - port: 8088
    name: resource
  clusterIP: None
  selector:
    app: resourcemanager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourcemanager
  labels:
    app: resourcemanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resourcemanager
  template:
    metadata:
      labels:
        app: resourcemanager
    spec:
      containers:
      - name: resourcemanager
        image: m1c4lv/hadoop-resourcemanager:v1
        ports:
        - containerPort: 8088
