kubernetes-v1/hiveingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hive-ingress
spec:
  rules:
    - host: "hiveserver.127.0.0.1.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hive-service
                port:
                  number: 10002
